k8s/runtrade.yml
apiVersion: v1
kind: Service
metadata:
  name: runtrade
  labels:
    app: runtrade
spec:
  selector:
    app: runtrade
  ports:
  - name: http
    port: 8086
    protocol: TCP
  type: ClusterIP
  clusterIP: None

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: runtrade
  labels:
    app: runtrade
spec:
  replicas: 1
  selector:
    matchLabels:
      app: runtrade
  template:
    metadata:
      labels:
        app: runtrade
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
      - name: runtrade
        image: ghcr.io/erebe/runtrade:latest
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8086
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: runtrade
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
      - runtrade.erebe.dev
      secretName: runtrade-tls
  rules:
  - host: runtrade.erebe.dev
    http:
      paths:
      - backend:
          serviceName: runtrade
          servicePort: http
